<resources>
    <string name="app_name">Grid Layout</string>
    <string name="title">Title</string>
    <string name="progress_bar_message">Progress bar message</string>
    <string name="general">New item</string>
    <string name="price">Rs. 599</string>
    <string name="item_name">Item Name</string>
    <string name="item_name_will_look_like_this">Item name will look like this</string>
    <string name="rate">Rs. 759</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="itemDescription">A chair is a type of seat, typically designed for one person and consisting of one or more legs, a flat or slightly angled seat and a back-rest. They may be made of wood, metal, or synthetic materials, and may be padded or upholstered in various colors and fabrics.A chair is a type of seat, typically designed for one person and consisting of one or more legs, a flat or slightly angled seat and a back-rest. They may be made of wood, metal, or synthetic materials, and may be padded or upholstered in various colors and fabrics.A chair is a type of seat, typically designed for one person and consisting of one or more legs, a flat or slightly angled seat and a back-rest. They may be made of wood, metal, or synthetic materials, and may be padded or upholstered in various colors and fabrics.</string>
    <string name="add_item_description_here">Add item description here</string>

    <string-array name="itemQty">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

</resources>