<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AddNewItem"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/newItem_actionBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="0dp"
        android:orientation="horizontal"
        android:textSize="20sp"
        android:background="@color/purple_500"
        android:weightSum="5"
        android:gravity="center_vertical">
        <ImageView
            android:id="@+id/newItem_backBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/back_foreground"
            android:layout_weight=".25"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4.75"/>


    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/newItem_imageLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="5dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="4dp"
                android:background="@color/white"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:id="@+id/newItem_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/app_name"
                    android:padding="0dp"
                    android:scaleType="fitXY"
                    android:src="@color/background"
                    android:layout_below="@id/newItem_actionBar"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="Add Image"
                    android:textColor="@color/purple_500"
                    android:textSize="15sp"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/newItem_nameLayout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="4dp"
                android:background="@color/white">

                <EditText
                    android:id="@+id/newItem_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="top"
                    android:clickable="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:hint="@string/item_name"
                    android:inputType="textPersonName"
                    android:paddingHorizontal="15dp"
                    android:textColor="@color/black"
                    android:textColorHint="#6C6C6C"
                    android:textSize="18sp"
                    android:background="@color/background"
                    android:autofillHints="name" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/newItem_priceLayout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="4dp"
                android:background="@color/white">

                <EditText
                    android:id="@+id/newItem_price"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="top"
                    android:clickable="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:hint="@string/price"
                    android:inputType="number"
                    android:paddingHorizontal="15dp"
                    android:textColor="@color/black"
                    android:textColorHint="#6C6C6C"
                    android:textSize="18sp"
                    android:background="@color/background"
                    android:autofillHints="phone" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/newItem_descriptionLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="4dp"
                android:minHeight="100dp"
                android:background="@color/background">

                <EditText
                    android:id="@+id/newItem_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:autofillHints="postalAddress"
                    android:background="@color/background"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:hint="@string/add_item_description_here"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="#6C6C6C"
                    android:textSize="18sp"
                    android:gravity="top|start"
                    android:inputType="textMultiLine"
                    android:lines="10"
                    android:minLines="5"
                    android:scrollHorizontally="false"
                    android:scrollbars="vertical" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/newItem_addBtnLayout"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="0dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/purple_500"
                app:cardCornerRadius="20dp"
                app:cardElevation="5dp"
                app:cardMaxElevation="0dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/newItem_addBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="50dp"
                    android:text="Add"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
