<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemView"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/itemView_actionBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="0dp"
        android:orientation="horizontal"
        android:textSize="20sp"
        android:background="@color/purple_500"
        android:weightSum="5"
        android:gravity="center_vertical">
        <ImageView
            android:id="@+id/itemView_backBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/back_foreground"
            android:layout_weight=".25"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4.25"/>
        <ImageView
            android:id="@+id/itemView_favoriteBtn"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/favorite_icon_blank"
            android:layout_weight=".25"
            android:layout_marginVertical="10dp"
            android:tag="blank"
            android:layout_marginEnd="10dp"/>
        <ImageView
            android:id="@+id/itemView_cartBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/cart_foreground"
            android:layout_weight=".25"
            android:layout_marginEnd="10dp"/>

    </LinearLayout>

    <ScrollView
        android:id="@+id/itemViewScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/itemView_actionBar"
        android:layout_above="@id/itemView_bottomBtn">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/itemView_imageLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="4dp"
                android:background="@color/white"
                android:clickable="true"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/white">

                    <ImageView
                        android:id="@+id/itemView_image"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@mipmap/select_image"
                        android:background="@mipmap/select_image"
                        android:contentDescription="@string/app_name"
                        android:adjustViewBounds="true"
                        android:scaleType="fitXY"
                        android:padding="0dp"
                        android:cropToPadding="true"
                        android:minHeight="350dp"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/itemView_itemNamePriceLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="4dp"
                android:background="@color/background"
                android:clickable="true"
                android:focusable="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:orientation="vertical"
                    android:textSize="20sp"
                    android:background="@color/background">

                    <TextView
                        android:id="@+id/itemView_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginBottom="8dp"
                        android:padding="5dp"
                        android:paddingHorizontal="5dp"
                        android:text="@string/item_name_will_look_like_this"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/itemView_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginBottom="8dp"
                        android:padding="5dp"
                        android:paddingHorizontal="5dp"
                        android:text="@string/rate"
                        android:textAlignment="viewStart"
                        android:textColor="#3A3A3A"
                        android:textStyle="bold"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/itemView_quantity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginBottom="8dp"
                        android:padding="4dp"
                        android:text="Qty: 1"
                        android:textAlignment="viewStart"
                        android:textColor="#3A3A3A"
                        android:textStyle="bold"
                        tools:ignore="RtlCompat"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/itemView_descriptionLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="4dp"
                android:background="@color/background"
                android:clickable="true"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:orientation="vertical"
                    android:textSize="20sp"
                    android:background="@color/background">

                    <TextView
                        android:id="@+id/itemView_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginBottom="8dp"
                        android:padding="5dp"
                        android:paddingHorizontal="5dp"
                        android:text="@string/itemDescription"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:textFontWeight="@integer/material_motion_duration_long_1"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/itemView_bottomBtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="0dp"
        android:orientation="horizontal"
        android:textSize="20sp"
        android:weightSum="5"
        android:gravity="center_vertical"
        android:layout_alignParentBottom="true">
        <androidx.cardview.widget.CardView
            android:id="@+id/itemView_addToCartBtnLayout"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="0dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="#FBA526"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/itemView_addToCartBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Add to cart"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</RelativeLayout>
</layout>